--- a/Node/views/frontPage.ejs
+++ b/Node/views/frontPage.ejs
@@ -79,7 +79,7 @@ a {
 }
 
 
-      nav .navigation a::after {
+  nav .navigation a::after {
   content: " ";
   position: absolute;
   left: 0;
@@ -90,7 +90,7 @@ a {
   background:  rgba(46, 16, 101, 0.933);
   transform-origin: center;
   transition: all 0.2s linear;
-  box-shadow: 0 0 5px rgba(46, 16, 101, 0.933), 0 0 10px #958ab5;
+  box-shadow: 0 0 3px rgba(15, 0, 43, 0.933), 0 0 10px #958ab5;
 }
 
 nav .navigation a:hover::after {
@@ -98,7 +98,7 @@ nav .navigation a:hover::after {
 }
 
 nav .navigation a:hover {
-  color: #0339eb;
+  color: #ffffff;
   transform: translateY(-10px);
 }
 
@@ -113,7 +113,7 @@ nav .joinBtn {
 }
 
 nav .joinBtn:hover {
-  background: #3633e6;
+  background: #d5d5f9;
   color: #ffffff;
   border-radius: 10px;
 }
@@ -291,7 +291,7 @@ nav .joinBtn:hover {
             user-friendly interface and secure technology, you can now send and
             receive payments with ease.
           </p>
-          <a href="/signup" class="bg-green-600 text-white px-5 py-2 rounded my-1">Sign Up Now</a>
+          <a href="/signup" class="bg-blue-900 text-white px-5 py-2 rounded my-1">Sign Up Now</a>
         </div>
       </section>
 
