--- a/Node/views/Home.ejs
+++ b/Node/views/Home.ejs
@@ -8,6 +8,29 @@
     <title>Home page</title>
   </head>
   <body>
+    <script>
+      const deleteTodo = (id) => {
+        fetch(`/Home/${id}`, {
+          method: "DELETE",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            _csrf: token,
+          }),
+        })
+          .then((res) => {
+            if (res.ok) {
+              window.location.reload();
+            }
+          })
+          .catch(err);
+        {
+          console.log(err);
+        }
+      };
+    </script>
+    <%- include('header.ejs') %>
     <div class="grid justify-center my-6">
       <% if(messages && messages.error && messages.error.length != 0) { %>
       <div
@@ -27,6 +50,12 @@
      <a href="/new" class="hover:bg-blue-400 group flex items-center rounded-md bg-blue-500 text-white text-sm font-medium pl-2 pr-3 py-2 shadow-sm">
         <svg width="20" height="20" fill="currentColor" class="mr-2" aria-hidden="true">
           <path d="M10 5a1 1 0 0 1 1 1v3h3a1 1 0 1 1 0 2h-3v3a1 1 0 1 1-2 0v-3H6a1 1 0 1 1 0-2h3V6a1 1 0 0 1 1-1Z" />
+            <div class="text-4xl bold block">
+          Welcome to the MiniPay<a
+            class="mx-20 text-xl rounded bg-green-700 font-medium p-2 m-5 outline-none text-white"
+            href="/Signout"
+            >SignOut</a>
+          </p>
         </svg>
         New
       </a>
