--- a/Node/views/login.ejs
+++ b/Node/views/login.ejs
@@ -31,6 +31,7 @@
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         margin: 10px;
         color: white;
+        /* align-items: center; */
       }
 
       .form-container h1 {
@@ -70,15 +71,12 @@
   </head>
   <body>
     <div class="container">
-      <div
-        class="form-container"
-        class="h-screen flex items-center justify-center"
-      >
+      <div class="form-container" class="h-screen flex">
         <h1 class="text-3xl">Welcome</h1>
         <h1 class="text-2xl">MiniPay Login</h1>
         <form
           id="loginForm"
-          class="self-center rounded-full"
+          class="self-center rounded-full text-black"
           action="/parentLogin"
           method="post"
         >
