--- a/Node/views/signup.ejs
+++ b/Node/views/signup.ejs
@@ -72,7 +72,12 @@
       <h1 class="font-extrabold text-3xl m-3 p-4 py-1">Welcome</h1>
       <h2 class="font-normal text-2xl">MiniPay Sign Up</h2>
       <br />
-      <form id="signupForm" action="/SignUpUser" method="post">
+      <form
+        id="signupForm"
+        action="/SignUpUser"
+        method="post"
+        class="text-black"
+      >
         <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
         <input
           type="text"
